src/less/listbox-button/listbox-button.less
@import "../variables/variables.less";
@import "../mixins/private/dropdown-mixins.less";
@import "../mixins/private/listbox-mixins.less";
@import "../mixins/private/token-mixins.less";
@import "../mixins/public/utility-mixins.less";

.listbox-button {
    line-height: normal;
    position: relative;
    vertical-align: bottom;
}

span.listbox-button {
    display: inline-block;
}

span.listbox-button--fluid,
span.listbox-button--fluid .expand-btn,
span.listbox-button--fluid .btn {
    width: 100%;
}

div.listbox-button__listbox {
    .dropdown-base(listbox-button-listbox);
}

button.expand-btn[aria-expanded="true"] ~ div.listbox-button__listbox,
.listbox-button button.btn[aria-expanded="true"] ~ div.listbox-button__listbox {
    display: block;
}

.listbox-button button[aria-invalid="true"] {
    .border-color-token(listbox-button-invalid-border-color, color-stroke-attention);
}

.listbox-button button.expand-btn--borderless,
.listbox-button button.btn--borderless {
    background-color: transparent;
    border-color: transparent;
    padding-left: 0;
    vertical-align: initial;

    &:focus {
        outline: none;
        text-decoration: underline;
    }

    &[aria-expanded="true"] ~ .listbox-button__listbox {
        top: 41px; // button height plus one px, to meet design guidelines
    }
}

.listbox-button.listbox-button--form button {
    .background-color-token(listbox-button-background-color, color-background-secondary);
    .border-color-token(listbox-button-border-color, color-stroke-default);
}

.listbox-button.listbox-button--form button[disabled],
.listbox-button.listbox-button--form button[aria-disabled="true"] {
    .border-color-token(listbox-button-disabled-border-color, color-background-disabled);
    .color-token(listbox-button-disabled-foreground-color, color-foreground-disabled);
}

.listbox-button.listbox-button--form button:focus {
    .background-color-token(combobox-textbox-focus-background-color, color-background-primary);
}

.listbox-button.listbox-button--form button[aria-invalid="true"] {
    .border-color-token(listbox-button-invalid-border-color, color-stroke-attention);
}

.listbox-button .btn__label {
    .color-token(listbox-button-label-color, color-foreground-secondary);
    margin-right: 3px;
}

.listbox-button--expanded .btn__label {
    .color-token(listbox-button-label-color, color-foreground-primary);
}

.listbox-button .btn__text {
    font-weight: bold;
    margin-right: auto;
}

.listbox-button__options[role="listbox"]:focus
    .listbox-button__option--active[role="option"] {
    background-color: var(--color-state-primary-hover);
}

.listbox-button__option svg.icon {
    .listbox-option-status();

    margin-left: @spacing-100;
}

div.listbox-button__option[role="option"][aria-selected="true"] svg.icon {
    opacity: 1;
}

div.listbox-button__option[role="option"] {
    .listbox-option-base();
    .dropdown-item-border-radius(listbox-button-listbox);

    cursor: default; // needed to override text cursor
}

div.listbox-button__option--active[role="option"] {
    font-weight: bold;
}

span.listbox-button__value {
    .truncate();

    flex: 1 0 auto;
}

// https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
.listbox-button__options:focus:not(:focus-visible) {
    outline: none;
}

// stylelint-disable no-descending-specificity
[dir="rtl"] {
    .listbox-button__option svg.icon {
        margin-left: 0;
        margin-right: @spacing-100;
    }

    .listbox-button .btn__label {
        .color-token(listbox-button-label-color, color-foreground-secondary);
        margin-left: 3px;
        margin-right: 0;
    }
}
// stylelint-enable no-descending-specificity

